# FAST

./: AGENTS.md  BCIC2020Track3_run.sh  BCIC2020Track3_train.py  FAST.py  FAST_mamba.py  README.md  full.sh  plot_accuracies.py  pyproject.toml  sinc_mamba.py  sweep.sh  train.py
