[project]
name = "fast"
version = "0.1.0"
description = "Functional Areas Spatio-Temporal Transformer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops",
    "h5py",
    "lightning",
    "ninja",
    "numpy",
    "pandas",
    "packaging",
    "pytorch-lightning",
    "scikit-learn",
    "scipy",
    "torch",
    "torchmetrics",
    "transformers",
    "mamba_ssm; sys_platform != 'darwin'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
no-build-isolation-package = ["mamba-ssm"]

[tool.hatch.build.targets.wheel]
packages = ["."]